# healthcare-ml-project

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml
app/: main.py  model_loader.py  routes.py  schemas.py  utils.py
database/: __init__.py  db_connection.py  models.py  queries.sql
frontend/: index.html
ml/: evaluate.py  predict.py  preprocess.py  train.py
notebooks/: analysis.ipynb
scripts/: clean.py  ingest.py  load.py
tests/: test_api.py  test_ml.py
